--- a/Section 7 - Intermediate CSS/7.2 CSS Positioning/index.html
+++ b/Section 7 - Intermediate CSS/7.2 CSS Positioning/index.html
@@ -21,8 +21,8 @@
       border-radius:50%;
 
       position: absolute;
-      left: 250px;
-      top: 150px;
+      left: 250px; /*left: 50%*/
+      top: 150px; /*top: 50%*/
     }
   </style>
 </head>
