--- a/Section 7 - Intermediate CSS/7.3+Flag+Project/7.3 CSS Flag Project/index.html
+++ b/Section 7 - Intermediate CSS/7.3+Flag+Project/7.3 CSS Flag Project/index.html
@@ -6,13 +6,38 @@
   <title>CSS Flag Project</title>
   <style>
     /* Write your CSS Code here */
-    .flag {
+
+    /* Red rectangle */
+    /* .flag {
       width: 900px;
       height: 600px;
-      background-color: rgb(206, 17, 38);
-    }
+      background-color: ;
+      position: relatiive;
+    } */
 
-    p {
+    /* Blue rectangle */
+    /* .flag > div {
+      background-color: #002868;
+      height: 300px; takes up exactly half of the red rectangle
+      width: 900px; 100% (of its parent)
+      position: absolute;
+      top: 0px;
+
+      /* position: static;
+    } */
+
+    /* White Circle */
+    /* .flag > div > div {
+      background-color: white;
+      width: 200px;
+      height: 200px;
+      border-radius: 100%;
+      position: absolute;
+      left: 350px;
+      top: 50px;
+    } */
+
+    /* p {
       font-size: 5rem;
       text-align: center;
     }
@@ -23,24 +48,45 @@
 
     div > div > p {
       margin: 0;
-    }
+    } */
 
-    div > div > div {
-      background-color: white;
-      width: 200px;
-      height: 200px;
-      border-radius: 100%;
+    .flag {
+      background-color: #CE1126;
+      width: 900px;
+      height: 600px;
       position: relative;
-      left: 350px;
-      top: 50px;
     }
 
     .flag > div {
       background-color: #002868;
+      width: 100%;
       height: 300px;
-      width: 900px;
-      position: static;
+      position: absolute;
+      top: 130px;
     }
+
+    .flag > div > div {
+      background-color: white;
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      position: absolute;
+      top: 50px;
+      left: 350px;
+    }
+
+    p {
+      font-size: 5rem;
+      text-align: center;
+      padding: 0;
+      margin: 0;
+    }
+
+    .flag > p {
+      color: white;
+    }
+
+    
   </style>
 </head>
 
