--- a/Section 10 - Grid/10.3+Mondrian+Project/10.3 Mondrian Project/index.html
+++ b/Section 10 - Grid/10.3+Mondrian+Project/10.3 Mondrian Project/index.html
@@ -21,29 +21,57 @@
     But grid lines are transparent!
     */
 
-    .flex-container {
+    body {
       display: flex;
       justify-content: center;
+      align-items: center;
     }
 
     .grid-container {
       width: 748px;
       height: 748px;
-      background-color: #F0F1EC;
+      background-color: #000;
 
       display: grid;
       grid-template-columns: 320px 198px 153px 50px;
-      grid-template-rows: 414px 130px 155px 20px;
+      grid-template-rows: 414px 130px 155px 22px;
 
       gap: 9px;
     }
 
     .red {
       background-color: #E72F24;
+
+      grid-column: 1 / 2;
+    }
+
+    .white1, .white2, .white3, .white4, .white5 {
+      background-color: #F0F1EC;
+    }
+
+    .white1 {
+      grid-column: span 3;
+    }
+
+    .white2 {
+      grid-row: span 2;
+    }
+
+    .white3 {
+      grid-area: 2 / 2 / 4 / 4
     }
 
     .blue {
       background-color: #004592;
+      border-bottom: 10px solid black;
+    }
+
+    .white5 {
+      grid-row-start: 3;
+      grid-row-end: 5;
+
+      grid-column-start: 4;
+      grid-column-end: 5;
     }
 
     .yellow {
@@ -54,61 +82,24 @@
       background-color: #232629;
     }
 
-    .top-left {
-      border: 9px solid black;
-    }
-
-    .top-right {
-      grid-column: span 2;
-      border: 9px solid black;
-    }
-
-    .mid-left {
-      grid-row-start: 2;
-      grid-row-end: 4;
-      border: 4.5px solid black;
-    }
-
-    .mid-mid {
-      grid-row-start: 2;
-      grid-row-end: 4;
-
-      grid-column-start: 2;
-      grid-column-end: 4;
-
-      border: 4.5px solid black;
-    }
-
-    .mid-top-right {
-      grid-row-start: 2;
-
-      border: 4.5px solid black;
-    }
-    
-
   </style>
 </head>
 
 <body>
   <!-- Write your HTML here -->
-  <div class="flex-container">
-    <div class="grid-container">
-      <div class="red top-left"></div>
-      <div class="white top-right"></div>
+  <div class="grid-container">
+    <div class="red"></div>
+    <div class="white1"></div>
 
-      <div class="white mid-left"></div>
-      <div class="white mid-mid"></div>
-      <div class="blue mid-top-right"></div>
+    <div class="white2"></div>
+    <div class="white3"></div>
+    <div class="blue"></div>
+    <div class="white4"></div>
 
-      <div class="white mid-bottom-right"></div>
-
-      <div class="white bottom-left"></div>
-      <div class="yellow bottom-mid"></div>
-      <div class="black bottom-right"></div>
-      <div class="white bottom-right-right"></div>
-    </div>
+    <div class="white5"></div>
+    <div class="yellow"></div>
+    <div class="black"></div>
   </div>
-  
 </body>
 
 </html>
