--- a/Section 11 - Bootstrap/11.0 Bootstrap Intro/index.html
+++ b/Section 11 - Bootstrap/11.0 Bootstrap Intro/index.html
@@ -23,7 +23,7 @@
     <!-- TODO 2: Add the Bootstrap Prebuilt Card here -->
     <div class="card" style="width: 18rem;">
       <div class="card-body">
-        <img class="card-img-top" src="./flower.jpg"></img>
+        <img class="card-img-top" src="./flower.jpg" alt="flower image"></img>
         <h5 class="card-title" style="padding-top: 10px;">Card title</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
