--- a/Section 11 - Bootstrap/11.2+Bootstrap+Components/11.2 Bootstrap Components/index.html
+++ b/Section 11 - Bootstrap/11.2+Bootstrap+Components/11.2 Bootstrap Components/index.html
@@ -116,6 +116,7 @@
     </div>
   </div>
 
+  <div class="container">
     <div id="carouselExampleIndicators" class="carousel slide">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -142,7 +143,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-  
+  </div>
   
   <!-- Link to javascript components of bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
