added the company testimonials

--- a/Section 11 - Bootstrap/11.3+TinDog+Project/11.3 TinDog Project/index.html
+++ b/Section 11 - Bootstrap/11.3+TinDog+Project/11.3 TinDog Project/index.html
@@ -98,13 +98,30 @@
   <section id="testimonial">
 
     <div>
-      <div class="p-5 text-center bg-body-tertiary">
+      <div class="p-5 text-center bg-body-tertiary pb-0">
         <div class="container py-5">
           <h2>"I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof."</h1>
             <img class="mt-5" src="./images/dog-img.jpg" alt="golden retriever" style="border-radius: 50%; height: 6rem"/>
           <p class="col-lg-8 mx-auto lead mt-2">
             Pebbles, New York
           </p>
+
+          <div class="container pt-5 pb-0">
+            <div class="row">
+              <div class="col col-sm-3">
+                <img src="./images/techcrunch.png" alt="TechCrunch logo" style="width: 11rem"/>
+              </div>
+              <div class="col col-sm-3">
+                <img src="./images/mashable.png" alt="Mashable logo" style="width: 11rem"/>
+              </div>
+              <div class="col col-sm-3">
+                <img src="./images/bizinsider.png" alt="Business Insider logo" style="width: 11rem"/>
+              </div>
+              <div class="col col-sm-3">
+                <img src="./images/tnw.png" alt="TNW logo" style="width: 4rem"/>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
