--- a/Section 11 - Bootstrap/11.3+TinDog+Project/11.3 TinDog Project/index.html
+++ b/Section 11 - Bootstrap/11.3+TinDog+Project/11.3 TinDog Project/index.html
@@ -108,16 +108,16 @@
 
           <div class="container pt-5 pb-0">
             <div class="row">
-              <div class="col col-sm-3">
+              <div class="col col-lg-3 col-sm-12">
                 <img src="./images/techcrunch.png" alt="TechCrunch logo" style="width: 11rem"/>
               </div>
-              <div class="col col-sm-3">
+              <div class="col col-lg-3 col-sm-12">
                 <img src="./images/mashable.png" alt="Mashable logo" style="width: 11rem"/>
               </div>
-              <div class="col col-sm-3">
+              <div class="col col-lg-3 col-sm-12">
                 <img src="./images/bizinsider.png" alt="Business Insider logo" style="width: 11rem"/>
               </div>
-              <div class="col col-sm-3">
+              <div class="col col-lg-3 col-sm-12">
                 <img src="./images/tnw.png" alt="TNW logo" style="width: 4rem"/>
               </div>
             </div>
