--- a/Section 11 - Bootstrap/11.3+TinDog+Project/11.3 TinDog Project/index.html
+++ b/Section 11 - Bootstrap/11.3+TinDog+Project/11.3 TinDog Project/index.html
@@ -48,7 +48,7 @@
   <!-- Features -->
   <section id="features">
 
-    <div class="container px-4" id="hanging-icons">
+    <div class="container px-4 mt-5" id="hanging-icons">
       <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
         <div class="col d-flex align-items-start">
           <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
@@ -101,7 +101,7 @@
       <div class="p-5 text-center bg-body-tertiary pb-0">
         <div class="container py-5">
           <h2>"I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof."</h1>
-            <img class="mt-5" src="./images/dog-img.jpg" alt="golden retriever" style="border-radius: 50%; height: 6rem"/>
+            <img class="mt-5" src="./images/dog-img.jpg" alt="golden retriever" style="border-radius: 50%; height: 100px"/>
           <p class="col-lg-8 mx-auto lead mt-2">
             Pebbles, New York
           </p>
