--- a/Section 12 - Capstone Project 2 - Personal Site/index.html
+++ b/Section 12 - Capstone Project 2 - Personal Site/index.html
@@ -4,6 +4,19 @@
         <meta charset="UTF-8"/>
         <title>Allison's Personal Site</title>
 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" src="./style.css"/>
     </head>
+
+    <body>
+        <section id="hero">
+            
+        </section>
+
+        <section id="resume"></section>
+
+        <section id="projects"></section>
+
+        <section id="about-me"></section>
+    </body>
 </html>
