--- a/Section 12 - Capstone Project 2 - Personal Site/index.html
+++ b/Section 12 - Capstone Project 2 - Personal Site/index.html
@@ -5,12 +5,17 @@
         <title>Allison's Personal Site</title>
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="stylesheet" src="./style.css"/>
+        <link rel="stylesheet" href="./style.css"/>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&family=Libre+Baskerville&family=Open+Sans:wght@700&display=swap" rel="stylesheet">
     </head>
 
     <body>
-        <section id="hero">
-            
+        <section id="hero" class="bg-image" style="height:100vh; background-image:url('./images/landscape-sunset.png')">
+            <h1 class="heading">Hi</h1>
+            <p>I love dogs</p>
         </section>
 
         <section id="resume"></section>
