--- a/Section 12 - Capstone Project 2 - Personal Site/index.html
+++ b/Section 12 - Capstone Project 2 - Personal Site/index.html
@@ -8,20 +8,26 @@
         <link rel="stylesheet" href="./style.css"/>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&family=Libre+Baskerville&family=Open+Sans:wght@700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&family=Libre+Baskerville&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     </head>
 
     <body>
         <section id="hero" class="bg-image" style="height:100vh; background-image:url('./images/landscape-sunset.png')">
-            <h1 class="heading">Hi</h1>
-            <p>I love dogs</p>
+            <h1 class="heading title">Hi</h1>
+            <p class="title-text">I love dogs</p>
         </section>
 
-        <section id="resume"></section>
+        <section id="resume">
+            <h2 class="heading">Experience</h2>
+        </section>
 
-        <section id="projects"></section>
+        <section id="projects">
+            <h2 class="heading">Projects</h2>
+        </section>
 
-        <section id="about-me"></section>
+        <section id="about-me">
+            <h2 class="heading">About Me</h2>
+        </section>
     </body>
 </html>
