decided to use bootstrap for my pages: next task is to add the hero

--- a/Section 12 - Capstone Project 2 - Personal Site/index.html
+++ b/Section 12 - Capstone Project 2 - Personal Site/index.html
@@ -14,8 +14,10 @@
 
     <body>
         <section id="hero" class="bg-image" style="height:100vh; background-image:url('./images/landscape-sunset.png')">
-            <h1 class="heading title">Hi</h1>
-            <p class="title-text">I love dogs</p>
+            <div class="container">
+                <h1 class="heading title">Hi, I'm Allison</h1>
+                <p class="title-text">a lifelong learner, chasing experiences</p>
+            </div>
         </section>
 
         <section id="resume">
