minor changes -- will make better another day

--- a/Section 12 - Capstone Project 2 - Personal Site/index.html
+++ b/Section 12 - Capstone Project 2 - Personal Site/index.html
@@ -92,7 +92,8 @@
 
         <section id="about-me">
             <h2 class="heading mx-5 my-5">About Me</h2>
-            <div id="carouselExample" class="carousel slide mx-5 my-5 d-flex flex-column align-items-center carousel-width" style="weight:100vh">
+            <div id="carouselExample" class="carousel slide mx-5 my-5 d-flex flex-column align-items-center justify-content-center carousel-width" style="width:100vh">
+                <div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="./images/plane.png" class="d-block w-100" alt="plane in the sky">
@@ -112,6 +113,7 @@
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
+            </div>
               </div>
         </section>
 
