--- a/Section 19 - jQuery/index.html
+++ b/Section 19 - jQuery/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Hello.</h1>
-    <button>Click Me</button>
+    <button>A</button>
     <button>Click Me</button>
     <button>Click Me</button>
     <button>Click Me</button>
