--- a/Section 19 - jQuery/index.html
+++ b/Section 19 - jQuery/index.html
@@ -9,11 +9,13 @@
 </head>
 <body>
     <h1>Hello.</h1>
-    <button>A</button>
     <button>Click Me</button>
     <button>Click Me</button>
     <button>Click Me</button>
     <button>Click Me</button>
+    <button>Click Me</button>
+
+    <input type="text" name="" value="">
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="index.js" charset="utf-8"></script>
