--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
 <body>
   <h1 id="level-title">Press A Key to Start</h1>
+  
+  <div class="start-container">
+    <div class="start-button"><h2 class="start">Start</h2></div>
+  </div>
+  
   <div class="container">
     <div class="row">
 
